@@ -2674,10 +2674,6 @@ libudev_core_la_SOURCES += \
 endif
 
 # ------------------------------------------------------------------------------
-EXTRA_DIST += \
-	test/rule-syntax-check.py
-
-# ------------------------------------------------------------------------------
 ata_id_SOURCES = \
 	src/udev/ata_id/ata_id.c
 
